# RUIAN_APP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  ONVIF.TEST  README.md  ak_eth.ko  build.sh  cmake_install.cmake  tuya.jffs2  update.sh  问题修复日志.txt  问题修改记录.xlsx
.workbuddy/memory/: 2026-05-23.md
app/data/: current_package.txt
dtb/7/: EVB_CBDM_AK3760E_V1.0.1.dtb
platform/upgrade/: app.sqsh4  data.jffs2
sat_ipc_onvif_demo/: CMakeLists.txt  build.sh  main.c
sat_ipc_onvif_demo/onvif/: CMakeLists.txt  log_info.h  onvif.c  onvif.h  onvif_user_token.c  sat_ipcamera.c  sat_user_common.c  sat_user_common.h
sat_ipc_onvif_demo/open_source/base64/: CMakeLists.txt  config.h
sat_ipc_onvif_demo/open_source/md5/: CMakeLists.txt  md5.c  md5test.c
sat_ipc_onvif_demo/open_source/mxml-3.3.1/: CMakeLists.txt  config.h  config.status  configure.build.sh  mxml-search.c  mxml-string.c  mxml.pc  testmxml.c
sat_ipc_onvif_demo/open_source/mxml-3.3.1/output/include/: mxml-private.h
sat_ipc_onvif_demo/open_source/mxml-3.3.1/output/lib/: libmxml.so.1.6
sat_ipc_onvif_demo/open_source/sha1/: CMakeLists.txt  sha1.c
sat_ipc_onvif_demo/xml_res/: onvif_discover_devices_tds_dn.xml
src/: CMakeLists.txt  Makefile  cmake_install.cmake  lv_conf.h  main.c
src/ANYKA37E.BIN.dir/: DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make  link.txt  progress.make
src/api/: CMakeLists.txt  Makefile  cmake_install.cmake  gpio.7z
src/api/audio/: audio_decode.c  audio_decode.h  audio_input.c  audio_input.h  audio_output.c  audio_output.h  audio_play.c  audio_play.h
src/api/common/: leo_audio_play.c  leo_audio_play.h  leo_monitor.c  leo_record.c  os_standby.c  os_standby.h
src/api/filelist/: leo_filelist.c
src/api/freetype/: lv_freetype.c
src/api/gpio/: gpio_api.h  gpio_base.c  leo_gpio.c  leo_gpio.h  leo_key.c  leo_key.h  新建文本文档.txt
src/api/network/: network_audio_package.c  network_common.c  network_common.h  network_mac.c  network_outdoor_upgrade.c  network_video_package.c  testRTSPClient.cpp
src/api/onvif_old/: sat_ipcamera.h
src/api/png_lib/: lodepng.c  lv_png.c
src/api/queue/: queue.c  queue.h  ring_buffer.c  ring_buffer.h
src/api/samplerate/: Makefile  cmake_install.cmake  samplerate.c
src/api/video/: avilib.c  avilib.h  jpeg_record.c  media_thumb.c  video_decode.c  video_decode.h  video_play.c  video_raw_queue.c  video_record.c
src/api/wlan/: tuya_api_func.c  tuya_sdk.c  wlan.c  wlan.h
src/api/xls/: lang_xls.c  lang_xls.h  tuya_uuid_and_key.c  tuya_uuid_and_key.h  xls.h
src/include/anyka/: ak_common.h  ak_common_video.h  ak_thread.h  ak_vdec.h  ak_vo.h
src/include/api/: file_api.h  leo_api.h
src/include/freetype/freetype/config/: ftmodule.h
src/include/libxls/: endian.h
src/include/live555/BasicUsageEnvironment/include/: BasicUsageEnvironment_version.hh
src/include/live555/UsageEnvironment/include/: UsageEnvironment_version.hh
src/include/live555/groupsock/include/: groupsock_version.hh
src/include/live555/liveMedia/include/: ADTSAudioStreamDiscreteFramer.hh  H264or5VideoStreamFramer.hh  HMAC_SHA1.hh  HMAC_hash.hh  MIKEY.hh  MatroskaFile.hh  MediaSession.hh  ProxyServerMediaSession.hh  RTCP.hh  RTPSource.hh  RTSPClient.hh  RawVideoFrameParameters.hh  RawVideoRTPSink.hh  SRTPCryptographicContext.hh  StreamReplicator.hh  TLSState.hh  liveMedia.hh  liveMedia_version.hh
src/include/tuya/: tuya_iot_config.h  tuya_ring_buffer.h  tuya_sdk.h
src/iniparser/: CMakeLists.txt  Makefile  cmake_install.cmake
src/layout/: language.c  language.h  layout_add_wifi.c  layout_background.c  layout_background.h  layout_cctv.c  layout_close.c  layout_common.c  layout_common.h  layout_connect_wifi.c  layout_customize_ring.c  layout_define.c  layout_define.h  layout_device_setting.c  layout_home.c  layout_interphone.c  layout_interphone.h  layout_keyboard.c  layout_logo.c  layout_monitor.c  layout_monitor.h  layout_motion.c  layout_passwd.h  layout_photo.c  layout_playback.c  layout_product_introduction.c  layout_ring.c  layout_set_floor_number.c  layout_set_language.c  layout_set_wifi.c  layout_setting.c  layout_setting.h  layout_setting_cctv.c  layout_setting_cctv_add.c  layout_setting_cctv_brand.c  layout_setting_cctv_brand.h  layout_setting_cctv_information.c  layout_setting_cctv_write.c  layout_setting_common.c  layout_setting_common.h  (+13 more)
src/layout/resource/: ring.gz.tar  rom.h
src/layout/resource/res/key_touch/: 9.pcm
src/lib/anyka/: lib_mux.rar  libplat_vi.rar
src/lv_drivers/: CMakeLists.txt  Makefile  cmake_install.cmake  lv_port_disp.c  lv_port_disp.h  lv_port_disp_old.c  lv_port_indev.c  lv_port_indev.h
src/lv_qrcode/: CMakeLists.txt  Makefile  cmake_install.cmake  lv_jpg_decode.c  lv_jpg_decode.h  lv_qrcode.c  lv_qrcode.h
src/lvgl/: CMakeLists.txt  Makefile  cmake_install.cmake
src/lvgl/src/: lv_conf_internal.h
src/lvgl/src/lv_core/: lv_disp.c  lv_obj.c  lv_obj.h  lv_obj_style_dec.h  lv_refr.c  lv_refr.h  lv_style.c
src/lvgl/src/lv_draw/: lv_draw_blend.c  lv_draw_img.c  lv_draw_rect.c  lv_draw_rect.h  lv_img_cache.c  lv_img_cache.h  lv_img_decoder.c
src/lvgl/src/lv_font/: lv_font.c  lv_font.h  lv_symbol_def.h
src/lvgl/src/lv_hal/: lv_hal_disp.h
src/lvgl/src/lv_misc/: lv_anim.c  lv_task.c  lv_task.h
src/lvgl/src/lv_themes/: lv_theme_material.c
src/lvgl/src/lv_widgets/: lv_btn.c  lv_btnmatrix.c  lv_btnmatrix.h  lv_calendar.c  lv_canvas.c  lv_checkbox.c  lv_dropdown.c  lv_img.c  lv_img.h  lv_imgbtn.c  lv_keyboard.c  lv_keyboard.h  lv_label.c  lv_line.c  lv_msgbox.c  lv_roller.c  lv_roller.h  lv_tabview.c  lv_textarea.c
src/tuya_batch_production_sdk/: 2022-05-31.xls  CMakeLists.txt  Makefile  cmake_install.cmake  上电流程说明.txt
src/tuya_batch_production_sdk/xls/: Makefile  cmake_install.cmake  tuya_uuid_and_key.c  tuya_uuid_and_key.h
